--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
+<html lang="en" xmlns:th="http:www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-
-<body class="container">
-
+<body>
 <h1 th:text="${title}">Default Title</h1>
-
 <nav th:replace="fragments :: navigation"></nav>
 
-<p th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</p>
+<p th:unless="${cheeses} and ${cheeses.size()}">no cheese :( </p>
 
 
-<table class="table">
 
-    <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Type</th>
-    </tr>
+<ul>
+    <li th:each="cheese : ${cheeses}" th:text="${cheese}"> </li>
 
-    <tr th:each="cheese : ${cheeses}">
-        <td th:text="${cheese.name}"></td>
-        <td th:text="${cheese.description}"></td>
-        <td th:text="${cheese.type.name}"></td>
-    </tr>
-
-</table>
-
+</ul>
 </body>
 </html>
