--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -19,11 +19,14 @@
     </tr>
 
     <tr th:each="cheese : ${cheeses}">
-        <td th:text="${cheese.key}"></td>
-        <td th:text="${cheese.value}"></td>
+        <td th:text="${cheese.name}"></td>
+        <td th:text="${cheese.description}"></td>
+        <td><a th:href="@{'/cheese/edit/' + ${cheese.cheeseId}}">edit</a></td>
     </tr>
 
 </table>
+
+
 
 </body>
 </html>
